--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,3 @@
-# GPU deployment configuration anchor
-x-gpu-deploy: &gpu-deploy
-  resources:
-    reservations:
-      devices:
-        - driver: nvidia
-          count: all
-          capabilities: [gpu]
-
 # ============================================================================
 # 4-УРОВНЕВАЯ СТРАТЕГИЯ ЛОГГИРОВАНИЯ ERNI-KI
 # Обновлено: 2025-08-22 - Оптимизированная система согласно аудиту
@@ -78,7 +69,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-    image: containrrr/watchtower:latest
+    image: containrrr/watchtower:1.7.1 # Закреплена версия для production
     logging: *default-logging
     restart: unless-stopped
     # Добавляем порт для HTTP API
@@ -151,6 +142,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./data/redis:/data
+      - ./conf/redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
     # Используем стандартную Docker bridge сеть
     labels:
       # Разрешить автообновление для Redis
@@ -264,8 +256,12 @@ services:
         condition: service_healthy
     env_file: env/cloudflared.env
     healthcheck:
-      disable: true
-    image: cloudflare/cloudflared:latest
+      test: ["CMD-SHELL", "timeout 10 sh -c '</dev/tcp/localhost/20241' || exit 1"]
+      interval: 60s
+      timeout: 15s
+      retries: 3
+      start_period: 30s
+    image: cloudflare/cloudflared:2024.9.1 # Закреплена версия для production
     logging: *important-logging
     restart: unless-stopped
     volumes:
@@ -449,7 +445,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-    image: searxng/searxng:latest
+    image: searxng/searxng:2024.9.7-b5b0c2d4 # Закреплена версия для production
     logging: *important-logging
     restart: unless-stopped
     volumes:
@@ -489,7 +485,7 @@ services:
       timeout: 3s
       retries: 5
       start_period: 10s
-    image: ollama/ollama:latest
+    image: ollama/ollama:0.3.12 # Закреплена версия для production
     logging: *critical-logging
     ports:
       - 11434:11434
@@ -520,7 +516,7 @@ services:
       timeout: 30s
       retries: 3
       start_period: 30s
-    image: nginx:latest
+    image: nginx:1.25.3 # Закреплена версия для production
     logging: *critical-logging
     ports:
       - "80:80"
@@ -553,7 +549,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    image: ghcr.io/open-webui/open-webui:latest
+    image: ghcr.io/open-webui/open-webui:v0.3.21 # Закреплена версия для production
     runtime: nvidia
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
@@ -586,7 +582,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-    image: garethgeorge/backrest:latest
+    image: garethgeorge/backrest:v1.4.0 # Закреплена версия для production
     logging: *important-logging
     ports:
       - "9898:9898"
@@ -615,7 +611,7 @@ services:
     depends_on:
       watchtower:
         condition: service_healthy
-    image: prom/prometheus:latest
+    image: prom/prometheus:v2.47.2 # Закреплена версия для production
     container_name: erni-ki-prometheus
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
@@ -659,7 +655,7 @@ services:
         condition: service_healthy
       prometheus:
         condition: service_healthy
-    image: grafana/grafana:latest
+    image: grafana/grafana:10.2.0 # Закреплена версия для production
     container_name: erni-ki-grafana
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin123
@@ -694,7 +690,7 @@ services:
     depends_on:
       watchtower:
         condition: service_healthy
-    image: grafana/loki:latest
+    image: grafana/loki:2.9.2 # Закреплена версия для production
     container_name: erni-ki-loki
     logging: *monitoring-logging
     restart: unless-stopped
@@ -720,7 +716,7 @@ services:
     depends_on:
       watchtower:
         condition: service_healthy
-    image: prom/alertmanager:latest
+    image: prom/alertmanager:v0.26.0 # Закреплена версия для production
     container_name: erni-ki-alertmanager
     command:
       - "--config.file=/etc/alertmanager/alertmanager.yml"
@@ -762,7 +758,7 @@ services:
     depends_on:
       watchtower:
         condition: service_healthy
-    image: prom/node-exporter:latest
+    image: prom/node-exporter:v1.6.1 # Закреплена версия для production
     container_name: erni-ki-node-exporter
     command:
       - "--path.procfs=/host/proc"
@@ -805,7 +801,7 @@ services:
         condition: service_healthy
       db:
         condition: service_healthy
-    image: prometheuscommunity/postgres-exporter:latest
+    image: prometheuscommunity/postgres-exporter:v0.15.0 # Закреплена версия для production
     container_name: erni-ki-postgres-exporter
     environment:
       - DATA_SOURCE_NAME=postgresql://postgres:aEnbxS4MrXqzurHNGxkcEgCBm@db:5432/openwebui?sslmode=disable
@@ -862,7 +858,7 @@ services:
     depends_on:
       watchtower:
         condition: service_healthy
-    image: prom/blackbox-exporter:latest
+    image: prom/blackbox-exporter:v0.24.0 # Закреплена версия для production
     container_name: erni-ki-blackbox-exporter
     volumes:
       - ./conf/blackbox-exporter/blackbox.yml:/etc/blackbox_exporter/config.yml:ro
@@ -885,6 +881,36 @@ services:
       # Разрешить автообновление для Blackbox Exporter
       - "com.centurylinklabs.watchtower.enable=true"
       - "com.centurylinklabs.watchtower.scope=monitoring-stack"
+
+  # Redis Exporter - мониторинг Redis
+  redis-exporter:
+    depends_on:
+      watchtower:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    image: oliver006/redis_exporter:v1.55.0
+    container_name: erni-ki-redis-exporter
+    environment:
+      - REDIS_ADDR=redis://redis:6379
+      - REDIS_PASSWORD=ErniKiRedisSecurePassword2024
+      - REDIS_EXPORTER_INCL_SYSTEM_METRICS=true
+    command: ["--redis.addr=redis://:ErniKiRedisSecurePassword2024@redis:6379"]
+    ports:
+      - "9121:9121"
+    restart: unless-stopped
+    logging: *monitoring-logging
+    healthcheck:
+      test: ["CMD-SHELL", "timeout 5 sh -c '</dev/tcp/localhost/9121' || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    labels:
+      # Разрешить автообновление для Redis Exporter
+      - "com.centurylinklabs.watchtower.enable=true"
+      - "com.centurylinklabs.watchtower.scope=monitoring-stack"
+    # Используем стандартную Docker bridge сеть
 
   # Ollama Exporter - мониторинг AI сервисов
   ollama-exporter:
@@ -1013,7 +1039,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 60s # Задержка запуска для ожидания готовности Loki
-    image: fluent/fluent-bit:latest
+    image: fluent/fluent-bit:2.2.0 # Закреплена версия для production
     container_name: erni-ki-fluent-bit
     logging: *monitoring-logging
     restart: unless-stopped
